fix(ConvertExcelToJSON): overflow y

--- a/ConvertExcelToJSON/style.css
+++ b/ConvertExcelToJSON/style.css
@@ -6,8 +6,7 @@
 
 body {
   width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: sans-serif;
   display: flex;
   align-items: center;
@@ -15,6 +14,7 @@ body {
 }
 
 .container {
+  margin: 50px 0;
   width: 600px;
 }
 
